--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 .jumbotron {
- background: url("file:///D:/Documents%20And%20Stuff/Documents/Personal%20Website/img/headeralt.png") no-repeat top center fixed;
+ background: url("img/headeralt.png") no-repeat top center fixed;
      -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
