--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 
 
 .jumbotron {
- background: url("img/headeralt.png") no-repeat top center fixed;
+ background: url("https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/headeralt.png") no-repeat top center fixed;
      -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
     background-size: 100%;
 }
 
-/*hello*/
+/*Whatup!!!!*/
 
 .push-spaces
 {
