New header image. Minor change to resume

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 .jumbotron {
- background: url("https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/headeralt.png") no-repeat top center fixed;
+ background: url("https://raw.githubusercontent.com/mhelms44/mhelms44.github.io/master/img/header02.png") no-repeat top center fixed;
      -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
